Adds Coffee Hour responsibilities and docs.

--- a/04.md
+++ b/04.md
@@ -1,2 +1,14 @@
 # April
 
+Create a **Summer Coffee Hour** signup sheet, beginning with the week after
+spring final exams (that is, the Monday between 27 April and 3 May, inclusive),
+and ending with the week before the start of fall classes (that is, the Monday
+between 18 and 24 August, inclusive).  Keep in mind that Coffee Hour should be
+moved to Tuesday when in conflict with the following holidays or events:
+
+* Memorial Day (last Monday of May)
+* Independence Day, if necessary (observed 4 July unless on a weekend; check
+  Academic Calendar)
+* GPSG graduate and professional student orientation (typically the Monday
+  before the start of fall classes)
+
