--- a/08.md
+++ b/08.md
@@ -1,2 +1,11 @@
 # August
 
+Create a **Fall Coffee Hour** signup sheet, beginning with the start of fall
+classes (that is, the Monday between 25 and 31 August, inclusive), and ending
+with the week after fall final exams (that is, the Monday between 15 and 21
+December, inclusive).  Keep in mind that Coffee Hour should be moved to Tuesday
+when in conflict with the following holidays:
+
+* Labor Day (first Monday of September)
+* Fall Holiday (typically second Monday of October; check the Academic Calendar)
+
