--- a/12.md
+++ b/12.md
@@ -1,2 +1,13 @@
 # December
 
+Create a **Spring Coffee Hour** signup sheet, beginning with the Monday on or
+after the reopening of University offices (typically the Monday between 3 and 9
+January, inclusive; check the Academic Calendar), and ending with the week of
+spring final exams (that is, the Monday between 20 and 26 April, inclusive).
+Keep in mind that Coffee Hour should be moved to Tuesday when in conflict with
+the following holiday:
+
+* Martin Luther King's Birthday Observance (third Monday of January)
+
+Coffee Hour should be held as normal during Spring Recess.
+
