Add ensuring grad mailing list is up-to-date.

--- a/01.md
+++ b/01.md
@@ -1,2 +1,6 @@
 # January
 
+In early January, double-check with Keena and the tech staff that any **new
+students entering for the spring term** have been added to the grad mailing
+list.  Until they are, copy them individually on any emails sent to the list.
+
