--- a/07.md
+++ b/07.md
@@ -1,2 +1,7 @@
 # July
 
+Obtain from Keena the **names and email addresses** of incoming graduate
+students entering in the fall; this should be more-or-less finalized by
+mid-July.  Be sure to get information for incoming PhD, MS, and BS/MS students
+(the last group is often forgotten).
+
