--- a/08.md
+++ b/08.md
@@ -9,3 +9,9 @@ when in conflict with the following holidays:
 * Labor Day (first Monday of September)
 * Fall Holiday (typically second Monday of October; check the Academic Calendar)
 
+
+Start individually **copying the new incoming students on emails** to the grad
+list in mid-August when topics start shifting toward Orientation Week events
+and the picnic.  Double-check with Keena that the list hasn't changed before
+sending anything.  Be sure to include all incoming PhD, MS, and BS/MS students.
+
