--- a/09.md
+++ b/09.md
@@ -1,2 +1,8 @@
 # September
 
+In early September, shortly after fall classes begin, double-check with the
+tech staff to ensure that the **grad mailing list** is up-to-date with all of
+the new PhD, MS, and BS/MS students.  Be especially sure that the BS/MS
+students haven't been forgotten.  Once everyone has been confirmed added to the
+list, there is no need to copy them individually on future messages.
+
