Add People chapter.

--- a/main.tex
+++ b/main.tex
@@ -9,8 +9,11 @@
 \chapter{Tasks and Responsibilities}\label{tasks}
 \include{tex/ch2-tasks.tex}
 
+\chapter{People}\label{people}
+\include{tex/ch3-people.tex}
+
 \chapter{Operational Calendar}\label{opcal}
-\include{tex/ch3-opcal.tex}
+\include{tex/ch4-calendar.tex}
 % Term of office begins with May and runs through April.
 \include{tex/05.tex}
 \include{tex/06.tex}
