Add coordination of Town Hall Meetings.

--- a/01.md
+++ b/01.md
@@ -4,3 +4,6 @@ In early January, double-check with Keena and the tech staff that any **new
 students entering for the spring term** have been added to the grad mailing
 list.  Until they are, copy them individually on any emails sent to the list.
 
+Talk to Karen to coordinate a date for a **spring Town Hall Meeting** between
+the graduate students and the department chair.  Aim for some time in February.
+
