--- a/05.md
+++ b/05.md
@@ -1,2 +1,6 @@
 # May
 
+If desired, talk to Karen to coordinate a date for a **summer Town Hall
+Meeting** between the graduate students and the department chair.  Aim for some
+time in June.
+
