--- a/09.md
+++ b/09.md
@@ -6,3 +6,7 @@ the new PhD, MS, and BS/MS students.  Be especially sure that the BS/MS
 students haven't been forgotten.  Once everyone has been confirmed added to the
 list, there is no need to copy them individually on future messages.
 
+Talk to Karen to coordinate a date for a **fall Town Hall Meeting** between the
+graduate students and the department chair.  Aim for some time in late October
+or early November.
+
