Add planning for most social events.

--- a/02.md
+++ b/02.md
@@ -1,2 +1,21 @@
 # February
 
+In early February, select a date for the fall **Welcome Picnic**.  (Yes,
+this actually has to be done this early!)  Historically, this has been held on
+the Friday of the first week of fall classes (that is, the Friday between 29
+August and 4 September, inclusive; check the Academic Calendar to be sure).
+
+Coordinate with Michele to book the Bartlett Shelter in Schenley Park; the CS
+Department covers this expense.  Generally, the extra permit cost of having
+alcoholic beverages has also been covered by the department.  (Whether to
+actually have alcohol at the event is usually dependent on the weather.)
+
+Reservations typically open in mid-February; check the website for the exact
+date, and have Michele book the shelter as soon as possible.  Until 2014, the
+University simply issued a check at this time, and we called to reserve the
+shelter; the payment was not required to be made until a later date, which we
+typically took care of in July.  In 2015, reservations shifted to an online
+system at
+[http://pittsburghpa.gov/dpw/shelters](http://pittsburghpa.gov/dpw/shelters).
+It is not yet known how this affects our procedure.
+
