--- a/06.md
+++ b/06.md
@@ -1,2 +1,7 @@
 # June
 
+Finalize dates for **social events during Orientation Week**, and book rooms
+with Karen where necessary.  Typically, we host a Game Night get-together the
+Friday evening before fall classes start, but be aware of other University-wide
+events being hosted by GPSG, etc. and try not to conflict.
+
