--- a/07.md
+++ b/07.md
@@ -5,3 +5,15 @@ students entering in the fall; this should be more-or-less finalized by
 mid-July.  Be sure to get information for incoming PhD, MS, and BS/MS students
 (the last group is often forgotten).
 
+If no one has yet **picked up the shelter permit** for the Welcome Picnic, now
+is the time to do so, as you will need to have this permit with you at the
+shelter on the day of.  This will generally require visiting the Public Works
+Permits Office downtown at 611 Second Ave in person; they are open weekdays
+from 7:00am to 3:00pm.
+
+At the Permits Office, you will need to present the check which was issued by
+the University and specify which of the available times you want the permit to
+be valid.  There isn't much practical difference between the choices, but we
+typically choose the 11:00am--7:00pm option, since that gives us plenty of time
+to set up for a 1:00pm picnic and tear down after about 3:30pm or so.
+
