--- a/09.md
+++ b/09.md
@@ -6,6 +6,13 @@ the new PhD, MS, and BS/MS students.  Be especially sure that the BS/MS
 students haven't been forgotten.  Once everyone has been confirmed added to the
 list, there is no need to copy them individually on future messages.
 
+Finalize dates for the **Halloween Party** (typically a weekend evening near 31
+October) and the **Holiday Party** (typically the Friday during final exams;
+that is the Friday between 12 and 18 December, inclusive).  Talk to Karen to
+book the Seminar Room (5317) for both events now, but start looking for
+alternative locations for the Halloween Party, as it is preferable to hold that
+event off-campus if possible.
+
 Talk to Karen to coordinate a date for a **fall Town Hall Meeting** between the
 graduate students and the department chair.  Aim for some time in late October
 or early November.
