--- a/01.md
+++ b/01.md
@@ -4,6 +4,11 @@ In early January, double-check with Keena and the tech staff that any **new
 students entering for the spring term** have been added to the grad mailing
 list.  Until they are, copy them individually on any emails sent to the list.
 
+Discuss and finalize dates for **spring social events**, booking rooms with
+Karen where necessary.  Typically, the International Luncheon is held sometime
+in April, although it may be better to hold it in February when people are less
+busy.
+
 Talk to Karen to coordinate a date for a **spring Town Hall Meeting** between
 the graduate students and the department chair.  Aim for some time in February.
 
