Clarify which BS/MS students belong on the grad list.

--- a/07.md
+++ b/07.md
@@ -2,8 +2,9 @@
 
 Obtain from Keena the **names and email addresses** of incoming graduate
 students entering in the fall; this should be more-or-less finalized by
-mid-July.  Be sure to get information for incoming PhD, MS, and BS/MS students
-(the last group is often forgotten).
+mid-July.  Be sure to get information for incoming PhD and MS students, as well
+as BS/MS students entering the master's program (this last group is often
+forgotten).
 
 If no one has yet **picked up the shelter permit** for the Welcome Picnic, now
 is the time to do so, as you will need to have this permit with you at the
