--- a/08.md
+++ b/08.md
@@ -13,5 +13,6 @@ when in conflict with the following holidays:
 Start individually **copying the new incoming students on emails** to the grad
 list in mid-August when topics start shifting toward Orientation Week events
 and the picnic.  Double-check with Keena that the list hasn't changed before
-sending anything.  Be sure to include all incoming PhD, MS, and BS/MS students.
+sending anything.  Be sure to include all incoming PhD and MS students, as well
+as BS/MS students entering the master's program.
 
