--- a/09.md
+++ b/09.md
@@ -2,9 +2,10 @@
 
 In early September, shortly after fall classes begin, double-check with the
 tech staff to ensure that the **grad mailing list** is up-to-date with all of
-the new PhD, MS, and BS/MS students.  Be especially sure that the BS/MS
-students haven't been forgotten.  Once everyone has been confirmed added to the
-list, there is no need to copy them individually on future messages.
+the new PhD and MS students, as well as BS/MS students entering the master's
+program.  Be especially sure that the BS/MS students haven't been forgotten.
+Once everyone has been confirmed added to the list, there is no need to copy
+them individually on future messages.
 
 Finalize dates for the **Halloween Party** (typically a weekend evening near 31
 October) and the **Holiday Party** (typically the Friday during final exams;
