Break student government and social events into separate chapters.

--- a/main.tex
+++ b/main.tex
@@ -6,14 +6,17 @@
 \include{tex/ch1-intro.tex}
 \include{tex/README.tex} % Compilation instructions
 
-\chapter{Tasks and Responsibilities}\label{tasks}
-\include{tex/ch2-tasks.tex}
+\chapter{Student Government}\label{government}
+\include{tex/ch2-government.tex}
+
+\chapter{Social Events}\label{events}
+\include{tex/ch3-events.tex}
 
 \chapter{People}\label{people}
-\include{tex/ch3-people.tex}
+\include{tex/ch4-people.tex}
 
 \chapter{Operational Calendar}\label{opcal}
-\include{tex/ch4-calendar.tex}
+\include{tex/ch5-calendar.tex}
 % Term of office begins with May and runs through April.
 \include{tex/05.tex}
 \include{tex/06.tex}
