Add placeholder for Assets chapter.

--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,11 @@
 \chapter{Social Events}\label{events}
 \include{tex/ch4-events.tex}
 
+\chapter{Assets and Accounts}\label{events}
+\include{tex/ch5-assets.tex}
+
 \chapter{Operational Calendar}\label{opcal}
-\include{tex/ch5-calendar.tex}
+\include{tex/ch6-calendar.tex}
 % Term of office begins with May and runs through April.
 \include{tex/05.tex}
 \include{tex/06.tex}
