Add planning for special events to calendar.

--- a/04.md
+++ b/04.md
@@ -12,3 +12,11 @@ moved to Tuesday when in conflict with the following holidays or events:
 * GPSG graduate and professional student orientation (typically the Monday
   before the start of fall classes)
 
+Although the term of office is nearly complete, **consider any special events**
+that are desired for the summer term.  Check in with the potential candidates
+for next year's CS-GSO board for buy-in, then begin coordinating with other
+organizations and book rooms accordingly.  Don't saddle the incoming board with
+events they won't want to follow through on, but try not to leave them with
+nothing, either.  Ideally, departing officers would help with these events in
+some capacity, to the extent that they are able.
+
