--- a/05.md
+++ b/05.md
@@ -1,6 +1,10 @@
 # May
 
+Begin **planning any special events** you may wish to hold during the summer
+term.  Coordinate with other organizations and book rooms accordingly.
+
 If desired, talk to Karen to coordinate a date for a **summer Town Hall
 Meeting** between the graduate students and the department chair.  Aim for some
-time in June.
+time in June.  (Summer term is the least necessary time for a Town Hall
+Meeting, and there may not be sufficient interest for it to be worthwhile.)
 
