--- a/08.md
+++ b/08.md
@@ -16,3 +16,6 @@ and the picnic.  Double-check with Keena that the list hasn't changed before
 sending anything.  Be sure to include all incoming PhD and MS students, as well
 as BS/MS students entering the master's program.
 
+Begin **planning any special events** you may wish to hold during the fall
+term.  Coordinate with other organizations and book rooms accordingly.
+
