--- a/11.md
+++ b/11.md
@@ -1,2 +1,7 @@
 # November
 
+Begin **planning any special events** you may wish to hold during the spring
+term.  Coordinate with other organizations and book rooms accordingly.  **Don't
+leave this until December** because the Holiday Party and final exams will
+require focus.
+
