--- a/08.md
+++ b/08.md
@@ -9,6 +9,19 @@ when in conflict with the following holidays:
 * Labor Day (first Monday of September)
 * Fall Holiday (typically second Monday of October; check the Academic Calendar)
 
+Early in the month, determine the **food and supplies budget for the Welcome
+Picnic.** Since this is paid for by the department, this should be coordinated
+directly with the Department Chair.  Data on past years' purchases and the
+resulting leftovers will be more persuasive in the case that a budget increase
+may be necessary or desired.
+
+Additionally, coordinate **soda for the Welcome Picnic;** this is usually done
+with Deb.  In some years, the department may have a large reserve of soda in
+their stockroom, in which case they should let you take from that.  In other
+years, their stock may be depleted, in which case the CS-GSO should offer to
+purchase some on the department's behalf, although this may require use of the
+department's purchasing card (P-card) and coordination with Don.  **In any
+case, the department has historically paid for the soda.**
 
 Start individually **copying the new incoming students on emails** to the grad
 list in mid-August when topics start shifting toward Orientation Week events
