Update shelter information.

--- a/02.md
+++ b/02.md
@@ -21,8 +21,9 @@ It is not yet known how this affects our procedure.
 
 If the Bartlett Shelter is unavailable, prefer the other shelters in Schenley
 Park according to roughly the following order: Anderson, Westinghouse, Camp
-David Lawrence, Overlook, Prospect.  (Note that the Oval Shelter is too small
-for our needs and the Vietnam Veterans Pavilion is too large and expensive.)
+David Lawrence, Overlook.  (Note that the Oval Shelter is too small
+for our needs and the Vietnam Veterans Pavilion is too large and expensive.
+Prospect Shelter does not have an on-site grill available.)
 Information and resources about the shelters can be found at
 [http://registerparks.pittsburghpa.gov/](http://registerparks.pittsburghpa.gov/).
 
