Add Grad Lounge fridge/microwave cleaning to Calendar.

--- a/01.md
+++ b/01.md
@@ -12,3 +12,9 @@ busy.
 Talk to Karen to coordinate a date for a **spring Town Hall Meeting** between
 the graduate students and the department chair.  Aim for some time in February.
 
+If conditions warrant, clean the refrigerator and microwave in the Graduate
+Lounge (SENSQ 6317).  Pick a day to do this after lunch, around 2:00pm, so as
+not to disrupt those who use the space regularly.  A few days prior, send an
+email to the grad list and post a notice on the refrigerator about the
+scheduled cleaning.  (See instructions in August.)
+
