--- a/08.md
+++ b/08.md
@@ -23,6 +23,26 @@ purchase some on the department's behalf, although this may require use of the
 department's purchasing card (P-card) and coordination with Don.  **In any
 case, the department has historically paid for the soda.**
 
+Conduct a thorough cleaning of the refrigerator and microwave in the Graduate
+Lounge (SENSQ 6317).  Pick a day, preferably before new students arrive, to do
+this after lunch, around 2:00pm, so as not to disrupt those who use the space
+regularly.  A few days prior, send an email to the grad list and post a notice
+on the refrigerator about the scheduled cleaning, something like:
+
+	Grad students,
+
+	In preparation for the arrival of the new graduate students, the CS-GSO
+    will be cleaning out the refrigerator in the Graduate Lounge on Friday 15
+    August 2014 beginning at 2:00pm.
+
+	A reminder that all items put in the refrigerator must always be labeled
+    with your name and the current date, otherwise they are for everyone to
+    use.  Any items that remain unlabeled or are clearly out-of-date as of
+    Friday at 2:00pm will be discarded at that time.
+
+	We will also be taking care of other housekeeping tasks for the Graduate
+    Lounge at that time as well.
+
 Start individually **copying the new incoming students on emails** to the grad
 list in mid-August when topics start shifting toward Orientation Week events
 and the picnic.  Double-check with Keena that the list hasn't changed before
